--- a/signin.css
+++ b/signin.css
@@ -8,12 +8,12 @@ body {
   align-items: center;
   padding-top: 40px;
   padding-bottom: 40px;
-  background-color: #f5f5f5;
+  background-color: #ebebeb;
 }
 
 .form-signin {
   width: 100%;
-  max-width: 330px;
+  max-width: 500px;
   padding: 15px;
   margin: auto;
 }
@@ -26,14 +26,13 @@ body {
   z-index: 2;
 }
 
-.form-signin input[type="email"] {
-  margin-bottom: -1px;
-  border-bottom-right-radius: 0;
-  border-bottom-left-radius: 0;
+[class*="col"] {
+  padding: 1rem;
+  color: white;
+  text-align: center;
 }
 
-.form-signin input[type="password"] {
-  margin-bottom: 10px;
-  border-top-left-radius: 0;
-  border-top-right-radius: 0;
+[class*="result"] {
+  padding: 2rem;
+  margin-bottom: 3rem;
 }
